k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8000

      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8000
